objects/PortalBannerLink__c.object
<CustomObject>
    <fields>
        <fullName>DisplayPopText__c</fullName>
        <description>Text displayed in pop-up</description>
        <label>Pop-up Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayPop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if user is presented pop-up text before browsing to URL</description>
        <label>Display Pop-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayPopupText__c</fullName>
        <label>Display Pop-up Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PortalBanner__c</fullName>
        <label>Portal Banner</label>
        <referenceTo>PortalBanner__c</referenceTo>
        <relationshipLabel>Portal Banner Links</relationshipLabel>
        <relationshipName>Portal_Banner_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Order of displayed links</description>
        <label>Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Determines where the link will be opened</description>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL of link</description>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>